# logsurfer

./: .gitignore  ChangeLog  LICENSE  Makefile.in  README  config.h.in  configure  configure.in
man/: Makefile.in  logsurfer.1.in  logsurfer.conf.pcre.4.in
src/: context.c  exit.c  globals.h  logsurfer.c  logsurfer.h  rule.c  str_util.c
