dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/logsurfer.h)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Checks for brain dead systems
AC_AIX

dnl Checks for libraries.
dnl Replace `main' with a function in -lgen:
AC_CHECK_LIB(gen, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_HEADER_TIME
AC_CHECK_HEADERS(sys/time.h stdlib.h malloc.h string.h strings.h limits.h unistd.h sys/resource.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_CHECK_FUNCS(strchr index memmove bcopy)

dnl Check for --with-etcdir.
AC_MSG_CHECKING(etcdir)
AC_ARG_WITH(etcdir,
[  --with-etcdir=PATH      Directory for logsurfer.conf \[/usr/local/etc\]],
[ case "$withval" in
  no)
    AC_MSG_ERROR(etcdir is obligatory.)
    ;;
  yes)
    etcdir="/usr/local/etc"
    ;;
  *)
    etcdir="$withval"
    ;;
  esac ],
[ etcdir="/usr/local/etc"
])
AC_MSG_RESULT($etcdir)
AC_SUBST(etcdir)

dnl Check for --with-etcdir.
AC_MSG_CHECKING(pcre)
AC_ARG_WITH([pcre],
  AS_HELP_STRING([--with-pcre], [enable support for Perl Compatible Regular Expressions])
)
AC_MSG_RESULT($with_pcre)
AS_IF([test "x$with_pcre" = "xyes"], [
  a=0
  AC_CHECK_HEADERS(pcre2posix.h, [], [a=1])
  AC_CHECK_LIB([pcre2-8],pcre2_compile_8, [], [a=1])

  if test $a == 0
  then
    AC_DEFINE(WITH_PCRE, [1], [Build with PCRE support])
  fi


])
AC_OUTPUT(Makefile src/Makefile man/Makefile, echo timestamp > stamp-h)
